--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@ description: 블로그 소개
 background: '/img/bg-about.jpg'
 ---
 
-<p>스타트업의 성공은 운이 아닙니다. 여기에는 공식이 있습니다.</p>
+<p>스타트업의 성공은 절대 운이 아닙니다. 그렇다고 수학처럼 백퍼센트 성공하는 공식이 있는 것은 아닙니다.</p>
+<p>하지만, 종국에는 내 사업이 성공해 있도록 만드는 방법론이 있습니다.</p>
+
+<p>바로 그 비법은 '성공할 수 밖에 없는 아이템'을 '반복적인 테스트'를 통해 발견하고, 검증해내는 것입니다. 그렇게 발견된 아이템을 또 다시 '반복적인 테스트'를 통해 폭팔적으로 성장할 수 있는 마케팅 전략을 세우는 것 입니다.</p>
+<p>필승 비법은 아니지만, 꾸준하게 가설을 검증하며 반드시 성공을 만들어내는 비즈니스의 정석을 연구하고자 합니다.</p>
 
 <p>스타트업의 시작부터, 스타트업의 성장을 이끄는 그로스 해킹까지.</p>
-
 <p class="mb-5">스타트업의 모든 것을 알려 드립니다.</p>
